extra comments and exploration in CEM

--- a/policy-based-methods/cross-entropy/CEM.ipynb
+++ b/policy-based-methods/cross-entropy/CEM.ipynb
@@ -244,11 +244,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([47, 27, 37, 26,  5, 33, 15, 13,  8, 10, 41, 17, 38, 48, 30,  9, 18,\n",
+       "       23,  1, 40,  6, 46, 11, 45, 32,  0, 36, 29, 24, 16, 25, 49, 14, 43,\n",
+       "        3, 39, 31,  7,  2, 34, 20, 21, 35, 28, 44, 22, 42, 19,  4, 12])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rs = np.random.rand(50)\n",
+    "\n",
+    "rs.argsort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2.72898504e-04, 6.08727689e-03, 8.79484353e-02, 9.08028300e-02,\n",
+       "       9.79996895e-01])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rs[np.array([47, 27, 37, 26, 12])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.rand(50)"
+    "?np.argsort"
    ]
   },
   {
@@ -304,10 +349,14 @@
     "        # for each of 50 weight pops we run an episode and gather discounted (gamma! ) total reward\n",
     "        rewards = np.array([agent.evaluate(weights, gamma, max_t) for weights in weights_pop])\n",
     "\n",
+    "        # sort rewards ASC and then select last n_elite indexes (n_elite = 50 * 0.2 = 10)\n",
     "        elite_idxs = rewards.argsort()[-n_elite:]\n",
+    "        # using those indexes select 10 best weights out weights_pop\n",
     "        elite_weights = [weights_pop[i] for i in elite_idxs]\n",
+    "        # take a mean of elite_weights and save it as next iteration best_weights\n",
     "        best_weight = np.array(elite_weights).mean(axis=0)\n",
     "\n",
+    "        # find a reward for best_weight by running an episode\n",
     "        reward = agent.evaluate(best_weight, gamma=1.0)\n",
     "        scores_deque.append(reward)\n",
     "        scores.append(reward)\n",
